--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <canvas id="glcanvas" width="1280" height="720"></canvas>
   </body>
   <script src="./gl-matrix.js"></script>
-
+  <script src="./track.js"></script>
+  <script src="./mousetrap.min.js"></script>
+  <script src="./wall.js"></script>
   <script src="./cubeprime.js"></script>
   <script src="./main.js"></script>
 </html>
