--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <script src="./gl-matrix.js"></script>
   <script src="./track.js"></script>
   <script src="./mousetrap.min.js"></script>
+  <!-- <script src="./coins.js"></script> -->
+  <script src="./container.js"></script>
   <script src="./wall.js"></script>
   <script src="./cubeprime.js"></script>
   <script src="./main.js"></script>
