coin shader added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="./track.js"></script>
   <script src="./mousetrap.min.js"></script>
   <script src="./coins.js"></script>
+  <script src="./hazardboards.js"></script>
   <script src="./container.js"></script>
   <script src="./wall.js"></script>
   <script src="./cubeprime.js"></script>
