jumping and player object improved

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
   <script src="./track.js"></script>
   <script src="./mousetrap.min.js"></script>
   <script src="./coins.js"></script>
+  <script src="./breaker.js"></script>
   <script src="./hazardboards.js"></script>
   <script src="./container.js"></script>
   <script src="./wall.js"></script>
-  <script src="./cubeprime.js"></script>
+  <script src="./body.js"></script>
+  <script src="./head.js"></script>
   <script src="./main.js"></script>
 </html>
