--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <script src="./hazardboards.js"></script>
   <script src="./container.js"></script>
   <script src="./wall.js"></script>
+  <script src="./bootsup.js"></script>
+  <script src="./bootsdown.js"></script>
   <script src="./body.js"></script>
   <script src="./head.js"></script>
   <script src="./main.js"></script>
