--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="./wall.js"></script>
   <script src="./bootsup.js"></script>
   <script src="./bootsdown.js"></script>
+  <script src="./jetpack.js"></script>
   <script src="./body.js"></script>
   <script src="./head.js"></script>
   <script src="./main.js"></script>
