--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   <script src="./bootsdown.js"></script>
   <script src="./jetpack.js"></script>
   <script src="./body.js"></script>
+  <script src="./policebody.js"></script>
   <script src="./head.js"></script>
+  <script src="./dog.js"></script>
+  <script src="./policehead.js"></script>
   <script src="./main.js"></script>
 </html>
