--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
   <body>
     <canvas id="glcanvas" width="1280" height="720"></canvas>
+    <div>
+      <h1 id="score">Score is : </h1>
+    </div>
   </body>
   <script src="./gl-matrix.js"></script>
   <script src="./track.js"></script>
